Static site (2014-11-12 shi)
==============================
Edit text on index page


Static site (2014-10-30 shi)
==============================
Main links are now more prominent
Flag alt text fixed
Hover colours for about links
Fixed links for about page


Static site (2014-10-29 shi)
==============================
Added link to view all publishers
Added link to view all countries


Static site (2014-10-08 shi)
==============================
Redesign index page to include both countries and publishers
Fixed new content for all translations
Replaced Development Portal with d-portal
Added selector dropdown menu for both countries and publishers
Translations for selector text


Static site (2014-09-19 shi)
==============================
Fixed new URL for Nepal portal
Added Generator link to replace Install link
Edited reminder style


Static site (2014-09-09 shi)
==============================
Fixed url for widget in About page


Static site (2014-08-28 shi)
==============================
Edited About page to include new generator section
Added translations
Added Pixabay attribution
Fixed Generator link


Static site (2014-08-11 shi)
==============================
Added attribution and links to data sources in about page
Added translations


Static site (2014-07-29 shi)
==============================
Fixed CSS for index
Added publishers portal index page
Added translations for new page
Added link to Google Group in about page


Static site (2014-07-23 shi)
==============================
Added new column in Dash quality for datasets


Static site (2014-06-25 shi)
==============================
Added Dash to About page
Translations for new Dash section


Static site (2014-06-10 shi)
==============================
Add "coming soon" to Install section + translations


Static site (2014-05-30 shi)
==============================
Front page layout changes
Include country flags and country codes
News page background lightened


Static site (2014-05-29 shi)