@@ -89,6 +89,7 @@ a.country_code:hover		{background-color:rgba(37, 115, 205, 0.7);}
 .description_wrap			{width:880px; margin:0 auto; margin-bottom:40px; padding:40px; text-align:left; background-color:rgba(255,255,255,0.1);}
 .description_wrap.publisher	{margin-top:40px; margin-bottom:40px;}
 .description				{display:inline-block; vertical-align:top; width:410px; margin-right:60px;}
+.description.full			{width:100%; margin:0;}
 .description:last-of-type	{margin-right:0;}
 .description span.title		{display:block; color:#fff; line-height:1.35em; font-size:1.4em; padding:10px 0; width:100%; border-top:1px solid #fff; border-bottom:1px solid #fff;}
 .description a:last-of-type	{margin-bottom:20px;}
