@@ -160,6 +160,7 @@
 </div>
 
 #sources
+<span id="sources"></span>
 <div class="about_wrap more">
 	<div class="default">
 		<div class="sources_head">{sources_title_text}</div>
