@@ -72,6 +72,15 @@
 						</div>
 					</div>
 				</div>
+				<div class="description_wrap">
+					<div class="description full">
+						<span class="title">{index_title2_text}</span>
+						<p>{index_paragraph3_text}</p>
+						<p>{index_paragraph4_text}</p>
+						<p>{index_paragraph5_text}</p>
+						<p>{index_paragraph6_text}</p>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
