@@ -49,6 +49,21 @@ d-portal.org还处于非常早期的开发，定于四月中旬Alpha版本。感
 #index_paragraph2_text
 在第一次迭代ICTS它包含通过国际援助透明度倡议(IATI)以及由经合组织发展援助委员会债权人报告系统公布的最新（2012年）汇总数据公布的最新数据。将未来的发展包括，除其他外，援助信息管理系统，国家预算数据及可比的社会经济指标范围。
 
+#index_title2_text
+来自哪里的数据？
+
+#index_paragraph3_text
+在下拉菜单中的数据从<a href="https://github.com/devinit/D-Portal/tree/master/dstore">数据库</a>它每天更新GMT+ 0与获取新数据建从IATI注册。
+
+#index_paragraph4_text
+我们列出报告使用 <a href="http://en.wikipedia.org/wiki/ISO_3166-2">ISO3166-2</a> 出版商的国家。对于归属，并链接到数据源，<a href="about.html#sources">去这里</a>。
+
+#index_paragraph5_text
+出版商与他们IATI发布者ID列表来自IATI注册表数据库直。
+
+#index_paragraph6_text
+出版商的下拉列表来自报道的这些出版商已发布的XML活动。
+
 #news_page_text 
 目前开发的信息（新闻） 
 
