@@ -49,6 +49,21 @@ est une plate-forme d'information sur le pays qui permet de suivre les flux de r
 #index_paragraph2_text
 Dans sa première itération, il contient des données actuelles publiées par l'Initiative internationale pour la transparence de l'aide (IATI), ainsi que les plus récentes (2012) des données agrégées publiées par le créancier CAD de l'OCDE Système de notification. Développement futur comprendra, entre autres, les données des information sur l'aide systèmes de gestion, les budgets nationaux et une série d'indicateurs socio- économiques comparables.
 
+#index_title2_text
+Où sont les données à partir de?
+
+#index_paragraph3_text
+Les données dans le menu déroulant est construit à partir de la <a href="https://github.com/devinit/D-Portal/tree/master/dstore">base de données</a> qui met à jour tous les jours GMT +0 avec de nouvelles données récupérées à partir du Registre de IATI.
+
+#index_paragraph4_text
+Nous listons les pays qui sont signalés par les éditeurs utilisant <a href="http://en.wikipedia.org/wiki/ISO_3166-2">ISO3166 Alpha-2</a>. Pour l'attribution et un lien vers les sources de données, <a href="about.html#sources">aller ici</a>.
+
+#index_paragraph5_text
+La liste des éditeurs avec leur IATI éditeur ID vient directement de la base de données du Registre de IATI.
+
+#index_paragraph6_text
+La liste déroulante des éditeurs provient des activités XML publiés rapportés par ces éditeurs.
+
 #news_page_text 
 Informations sur le développement actuel (Nouvelles) 
 
