@@ -1,4 +1,4 @@
-#welcome_text
+﻿#welcome_text
 d-portal.org में आपका स्वागत है
 
 #publishers_welcome_text
@@ -48,6 +48,21 @@ IATI डेटा का अन्वेषण करें.
 
 #index_paragraph2_text
 पहली यात्रा में आईसीटी यह अंतरराष्ट्रीय सहायता पारदर्शिता पहल (IATI) और साथ ही ओईसीडी डैक ऋणदाता रिपोर्टिंग प्रणाली द्वारा प्रकाशित एकत्रित (2012) सबसे हाल के डेटा के माध्यम से प्रकाशित मौजूदा डेटा शामिल हैं. भविष्य के विकास , अन्य बातों के साथ सहायता सूचना प्रबंधन प्रणाली , राष्ट्रीय बजट से डेटा और तुलनीय सामाजिक - आर्थिक संकेतकों की एक श्रृंखला शामिल होंगे .
+
+#index_title2_text
+डेटा कहां से है?
+
+#index_paragraph3_text
+लटकती मेनू में डाटा दिलवाया नए डेटा के साथ हर रोज जीएमटी 0 जो अद्यतन <a href="https://github.com/devinit/D-Portal/tree/master/dstore"> डाटाबेस </a> से बनाया गया है IATI रजिस्ट्री से.
+
+#index_paragraph4_text
+ हम <a href="http://en.wikipedia.org/wiki/ISO_3166-2"> ISO3166-2 </a> का उपयोग प्रकाशकों द्वारा सूचित कर रहे हैं कि देश की सूची. रोपण और डेटा स्रोतों के लिए लिंक, <a href="about.html#sources"> लिए यहां जाने </a>.
+
+#index_paragraph5_text
+उनके IATI प्रकाशक आईडी के साथ प्रकाशकों की सूची सीधे IATI रजिस्ट्री डेटाबेस से आता है.
+
+#index_paragraph6_text
+प्रकाशक की लटकती सूची इन प्रकाशकों द्वारा रिपोर्ट प्रकाशित एक्सएमएल गतिविधियों से आता है.
 
 #news_page_text 
 वर्तमान विकास पर सूचना (समाचार) 
