@@ -49,6 +49,21 @@ IATIデータを探る。
 #index_paragraph2_text
 その最初の反復では、国際援助の透明性イニシアティブ（ IATI ）だけでなく、OECDのDAC債権国報告システムによって発行さに集約（ 2012 ）最新のデータを通じて発行した最新のデータが含まれています。
 
+#index_title2_text
+データどこからですか？
+
+#index_paragraph3_text
+ドロップダウンメニュー内のデータがフェッチされた新しいデータで日常GMT0を更新<a href="https://github.com/devinit/D-Portal/tree/master/dstore">データベース</a>でから構築されているIATIレジストリから。
+
+#index_paragraph4_text
+私たちは、<a href="http://en.wikipedia.org/wiki/ISO_3166-2"> ISO3166アルファ-2</a>のを使用して、出版社によって報告されている国をリストアップ。帰属およびデータ·ソースへのリンクは、<a href="about.html#sources">はこちらを行く</a>。
+
+#index_paragraph5_text
+彼らのIATIパブリッシャIDを持つ出版社のリストはストレートIATIレジストリデータベースから来ている。
+
+#index_paragraph6_text
+出版社のドロップダウンリストは、これらの出版社によって報告された公開されたXMLの活動から来ている。
+
 #news_page_text
 現在の開発に関する情報
 
