@@ -49,6 +49,21 @@ es una plataforma de información basada en los países que registra los flujos 
 #index_paragraph2_text
 Las TIC en la primera iteración que contiene los datos actuales publicados a través de la Iniciativa Internacional de Transparencia de la Ayuda (IATI), así como los datos más recientes (2012) agregada publicados por el Sistema de Notificación de los Países Acreedores del CAD. ¿Será el desarrollo futuro incluyen, entre otros, los datos de emergencia información, Sistemas de Gestión de los presupuestos nacionales y una serie de indicadores socioeconómicos comparables.
 
+#index_title2_text
+¿Dónde están los datos de?
+
+#index_paragraph3_text
+Los datos en el menú desplegable se construyen a partir de la <a href="https://github.com/devinit/D-Portal/tree/master/dstore">base de datos</a> que se actualiza todos los días GMT 0 con nuevos datos captados del Registro de la IATI.
+
+#index_paragraph4_text
+Tenemos una lista de países que se reportan por los editores que utilizan <a href="http://en.wikipedia.org/wiki/ISO_3166-2">ISO3166 alfa-2</a>. Para la atribución y un enlace a las fuentes de datos, <a href="about.html#sources">ir aquí</a>.
+
+#index_paragraph5_text
+La lista de los editores con su ID de editor de IATI viene directamente de la base de datos del Registro de la IATI.
+
+#index_paragraph6_text
+La lista desplegable de Editores proviene de actividades XML publicados reportados por estos editores.
+
 #news_page_text 
 La información sobre el desarrollo actual (Noticias) 
 
