@@ -1,6 +1,8 @@
 Static site (2014-11-12 shi)
 ==============================
 Edit text on index page
+Added footer notes for attribution and explanation
+Translations for new text
 
 
 Static site (2014-10-30 shi)
